package edu.fiuba.algo3.modelo.unidades.zerg;

import edu.fiuba.algo3.modelo.Mapa;
import edu.fiuba.algo3.modelo.estadisticas.Nombre;
import edu.fiuba.algo3.modelo.edificios.Edificio;
import edu.fiuba.algo3.modelo.estadisticas.Danio;
import edu.fiuba.algo3.modelo.estadisticas.Vida;
import edu.fiuba.algo3.modelo.excepciones.CoordenadaFueraDelMapa;
import edu.fiuba.algo3.modelo.geometria.Coordenada;
import edu.fiuba.algo3.modelo.jugadores.Inventario;
import edu.fiuba.algo3.modelo.recursos.GasVespeno;
import edu.fiuba.algo3.modelo.recursos.Mineral;
import edu.fiuba.algo3.modelo.recursos.Recurso;
import edu.fiuba.algo3.modelo.recursos.Suministro;
import edu.fiuba.algo3.modelo.terrenos.Terreno;
import edu.fiuba.algo3.modelo.unidades.Unidad;
import edu.fiuba.algo3.modelo.unidades.UnidadZerg;
import edu.fiuba.algo3.modelo.unidades.estados.UnidadEnConstruccion;
import edu.fiuba.algo3.modelo.unidades.modificadores.Invisible;
import edu.fiuba.algo3.modelo.unidades.modificadores.Visible;

import java.util.ArrayList;
import java.util.List;

public class AmoSupremo extends UnidadZerg {

    protected int radioDeVisibilidad = 4;

    List<Coordenada> coordenadasVisibles = new ArrayList<Coordenada>();
    private Recurso suministroAAgregar = new Suministro(5);
    
    public AmoSupremo() {
        this.costoEnGas = new GasVespeno(0);
        this.costoEnMinerales = new Mineral(150);
        this.costoSuministro = new Suministro(0);
        this.tiempoConstruccion = 5;
        this.danioAereo = new Danio(0);
        this.danioTerrestre = new Danio(0);
        this.rango = 0;
        this.vida = new Vida(200);
        this.nombre = new Nombre("AmoSupremo");
        this.aerea = true;
        establecerEstado(new UnidadEnConstruccion());
    }

    @Override
    public void actualizarUnidad(Inventario inventario) {
        regenerar();
        actualizarMapa();
    }

    @Override
    public boolean ocupar(Terreno terreno) {
        boolean sePudoOcupar = true;
        try {
            terreno.ocuparPorUnidad(this);
            terreno.establecerVisibilidadAUnidad(this);
        } catch (RuntimeException e){
            sePudoOcupar = false;
        }
        return sePudoOcupar;
    }

    @Override
    public Unidad generarse(Edificio edificio, Inventario inventario) {
        return edificio.generarUnidad(this, inventario);
    }

    @Override
    public void agregarSuministro(Inventario inventario) {
        inventario.agregarSuministro(suministroAAgregar);
    }

    private void actualizarMapa(){
        invisibilizarTerrenosAnteriores();
        buscarCoordenadasAVisivilizar();
        visibilizarTerrenosActuales();
    }

    private void invisibilizarTerrenosAnteriores(){
        for(Coordenada coord : coordenadasVisibles) {
            try{
                Mapa.devolverInstancia().buscarTerreno(coord).cambiarVisibilidadActual(new Invisible());
            } catch (CoordenadaFueraDelMapa exception){}
        }
    }

    private void visibilizarTerrenosActuales(){
        for(Coordenada coord : coordenadasVisibles) {
            try{
                Mapa.devolverInstancia().buscarTerreno(coord).cambiarVisibilidadActual(new Visible());
            } catch (CoordenadaFueraDelMapa exception){}
        }
    }

    private void buscarCoordenadasAVisivilizar(){
        coordenadasVisibles.clear();
        List<Coordenada> coordenadas = coordenada.hallarCoordenadasAdyacentes(radioDeVisibilidad);
        for(Coordenada coordenadaHallada : coordenadas){
            coordenadasVisibles.add(coordenadaHallada);
        }
    }


}
